--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -7,7 +7,7 @@
     top: 0px;
 
     width: 100%;
-    max-width: 100dvh;
+    max-width: 100dvw;
     height: 100dvh;
 
     line-height: 50px;
@@ -16,12 +16,6 @@
 
     transform: translateX(0);
     transition: transform 0.5s ease-in-out;
-}
-
-@media (min-width: 768px) { /* pc / tablets */
-    .sidebar{
-        max-width: var(--sidebar-width);
-    }
 }
 
 .sidebar ul{
@@ -43,6 +37,7 @@
     color: var(--purple-color);
     border: none;
     font-size: 30px;
+    margin-right: 40px;
     margin-left: 20px;
     width: 54px;
     height: 54px;
@@ -81,4 +76,14 @@
 
 .sidebar .toggle-button:hover{
     color: #975da9;
+}
+
+@media (min-width: 768px) { /* pc / tablets */
+    .sidebar{
+        max-width: var(--sidebar-width);
+    }
+
+    .sidebar .toggle-button{
+        margin-right: 0px;
+    }
 }
